- Added histsave and histload C++ functions to save/load ndhist C++ objects to
  HDF files. It calls the Python function histsave and histload implemented in
  the storage.py python module of the ndhist package.

- Added the ``storage`` Python module to save/load a ndhist object to a HDF
  file from Python.

- Added the ndhist properties ``full_binentries``, ``full_bincontent``, and
  ``full_squaredweights``, that return ndarrays including possible under- and
  overflow bins. These properties are useful for later storage of the entire
  histogram to a file.

- When creating a ndhist object, make sure, that the given axis objects are
  unique objects. If not, make them unique.

- Implemented the ``ndzip`` utility function for creating structured ndarrays
  for filling of high dimensional histograms in a convienient way.

- Implement the fill procedure also for a structured ndarray
  given as ndvalues object. (generic_nd_traits) The fill code is generalized and
  is used by both methods to avoid code repetition.

- Implemented the binerror ndhist property, that is just the square root value
  of the sum of weights squared values.

- Implemented the lower_binedges Axis property.

- Implemented the upper_binedges Axis property.

- Added unit test for the constant_bin_width_axis Axis class.

- Adjusted the fill method so the user can pass a scalar to the ndvalues
  argument if the ndhist object is a 1-dimensional histogram. A series of values
  to fill into a 1-dimensional histogram can be passed as a single list of
  these values, a 1-dimensional ndarray of these values or a tuple with one
  element holding either a scalar of the values to fill or a list or ndarray of
  values to fill.

- Implemented ndhist's clear() method, that sets all bin content values to zero.
  If the ndhist object is a view, only the bins visible by the view are set to
  zero. This allows selective clearing.

- Renamed the rebin and rebin_axis method into merge_bins and merge_axis_bins,