@@ -115,6 +115,7 @@ if(${PROJECT_NAME}_CONFIGURED_SUCCESSFULLY)
         src/ndhist/ndhist.cpp
         src/ndhist/ndtable.cpp
         src/ndhist/storage.cpp
+        src/ndhist/stats/mean.cpp
     )
 
     include_directories(
@@ -171,6 +172,8 @@ if(${PROJECT_NAME}_CONFIGURED_SUCCESSFULLY)
         src/pybindings/axis.cpp
         src/pybindings/axes/constant_bin_width_axis.cpp
         src/pybindings/axes/generic_axis.cpp
+        src/pybindings/stats/mean.cpp
+        src/pybindings/stats/module.cpp
         src/pybindings/error.cpp
         src/pybindings/ndhist.cpp
         src/pybindings/ndtable.cpp
